# os-info

./: Cargo.toml  README.md  SPECIFICATION.md  sample.json
crates/os-info/: Cargo.toml
crates/os-info/src/: lib.rs  os_release.rs  schema.rs  technology.rs  tests.rs
os/: aerynos.json  serpent-os.json
schema/0.1/: os-info.schema.json  technology-capabilities.schema.json
technologies/: boulder.json  flatpak.json  moss.json
