[package]
name = "os-info"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Structured OS information standard"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
