[package]
name = "os-info"
version = "0.1.0"
license = "MPL-2.0"
description = "Structured OS information standard"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
chrono = { workspace = true, features = ["serde"] }
